--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <header>
       <div class="logo">
-        <span>COLMARACADEMY</span>
+        <img src="./resources/images/ic-logo.svg" alt="logo" />
+        <span>COLMAR</span>
+        <span>ACADEMY</span>
       </div>
       <div class="navigation">
         <ul>
