--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
     <!-- Banner -->
 
+    <div class="banner">
+      <img src="./resources/images/banner.jpg" alt="students studying" />
+      <div class="content">
+        <h1>Learn something new everyday</h1>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <p>Start here</p>
+      </div>
+    </div>
+
     <!-- About -->
 
     <!-- Courses -->
