--- a/index.html
+++ b/index.html
@@ -31,12 +31,47 @@
       <img src="./resources/images/banner.jpg" alt="students studying" />
       <div class="content">
         <h1>Learn something new everyday</h1>
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <p>Start here</p>
       </div>
     </div>
 
-    <!-- About -->
+    <!-- Information -->
+
+    <div class="information">
+      <div class="container">
+        <img src="./resources/images/information-main.jpg" alt="man reading" />
+        <div class="content">
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/information-orientation.jpg" alt="students walking" />
+        <div class="content">
+          <h3>Orientation date</h3>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <p class="read">Read more</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/information-campus.jpg" alt="campus" />
+        <div class="content">
+          <h3>Our Campus</h3>
+          <p>Find which campus is close by you</p>
+          <p class="read">Read more</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/information-guest-lecture.jpg" alt="guest lecturer" />
+        <div class="content">
+          <h3>Our guest lecture</h3>
+          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+          <p class="read">Read more</p>
+        </div>
+      </div>
+    </div>
 
     <!-- Courses -->
 
