--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <img src="./resources/images/information-orientation.jpg" alt="students walking" />
         <div class="content">
           <h3>Orientation date</h3>
-          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
           <p class="read">Read more</p>
         </div>
       </div>
@@ -75,7 +75,77 @@
 
     <!-- Courses -->
 
+    <div class="courses">
+      <h2>Start learning</h2>
+      <div class="container">
+        <img src="./resources/images/course-software.jpg" alt="computers" />
+        <div class="content">
+          <h3>Software engineering</h3>
+          <p>COURSES</p>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/course-computer-art.jpg" alt="mobile phone" />
+        <div class="content">
+          <h3>Computer art</h3>
+          <p>COURSES</p>
+          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/course-design.jpg" alt="camera" />
+        <div class="content">
+          <h3>Design</h3>
+          <p>COURSES</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/course-data.jpg" alt="computer data" />
+        <div class="content">
+          <h3>Data</h3>
+          <p>COURSES</p>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/course-business.jpg" alt="chess set" />
+        <div class="content">
+          <h3>Business</h3>
+          <p>COURSES</p>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+      </div>
+      <div class="container">
+        <img src="./resources/images/course-marketing.jpg" alt="watch" />
+        <div class="content">
+          <h3>Marketing</h3>
+          <p>COURSES</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
+
     <!-- Thesis -->
+
+    <div class="thesis">
+      <div class="container">
+        <video src="./resources/videos/thesis.mp4">
+        <div class="content">
+          <h3>Reimagine urban</h3>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+        </div>
+      </div>
+      <div class="container">
+        <div class="content">
+        </div>
+      </div>
+      <div class="container">
+        <div class="content">
+        </div>
+      </div>
+    </div>
 
     <!-- Footer -->
 
