--- a/index.html
+++ b/index.html
@@ -138,11 +138,17 @@
         </div>
       </div>
       <div class="container">
+        <img src="./resources/images/thesis-fisma.jpg" alt="papers on desk" />
         <div class="content">
+          <h3>Fisma: Design and Prototype</h3>
+          <p>Designer showcase of new prototype product</p>
         </div>
       </div>
       <div class="container">
+        <img src="./resources/images/thesis-now-and-then.jpg" alt="city" />
         <div class="content">
+          <h3>Now and then</h3>
+          <p>Research study about New York</p>
         </div>
       </div>
     </div>
