--- a/index.html
+++ b/index.html
@@ -155,5 +155,13 @@
 
     <!-- Footer -->
 
+    <footer>
+      <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+      <div class="menu">
+        <span>Terms</span>
+        <span>Privacy</span>
+      </div>
+    </footer>
+
   </body>
 </html>
