--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="./resources/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <title>Colmar Academy</title>
   </head>
   <body>
@@ -10,65 +11,92 @@
     <!-- Heading -->
 
     <header>
-      <div class="logo">
-        <img src="./resources/images/ic-logo.svg" alt="logo" />
-        <span>COLMAR</span>
-        <span>ACADEMY</span>
+      <div class="desktop-nav">
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="company logo" />
+          <span class="colmar">COLMAR</span>
+          <span class="academy">ACADEMY</span>
+        </div>
+        <nav class="navigation">
+          <ul role="presentation">
+            <li>On campus</li>
+            <li>Online</li>
+            <li>For companies</li>
+            <li>Sign in</li>
+          </ul>
+        </nav>
       </div>
-      <div class="navigation">
-        <ul>
-          <li>On campus</li>
-          <li>Online</li>
-          <li>For companies</li>
-          <li>Sign in</li>
-        </ul>
-      </div>
+      <nav class="mobile-nav">
+        <img src="./resources/images/ic-logo.svg" alt="company logo" />
+        <img src="./resources/images/ic-on-campus.svg" alt="desk" />
+        <img src="./resources/images/ic-online.svg" alt="desktop" />
+        <img src="./resources/images/ic-login.svg" alt="log in" />
+      </nav>
     </header>
 
     <!-- Banner -->
 
     <div class="banner">
-      <img src="./resources/images/banner.jpg" alt="students studying" />
-      <div class="content">
-        <h1>Learn something new everyday</h1>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        <p>Start here</p>
+      <div class="section" role="presentation">
+        <div class="container" role="presentation">
+          <div class="image" role="presentation">
+            <img src="./resources/images/banner.jpg" alt="students studying" />
+          </div>
+        </div>
+        <div class="content" role="presentation">
+          <h1>Learn something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <div class="button" role="button">
+            <h3>Start here</h3>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- Information -->
 
     <div class="information">
-      <div class="container">
-        <img src="./resources/images/information-main.jpg" alt="man reading" />
-        <div class="content">
+      <div class="section" role="presentation">
+        <div class="feature">
+          <img src="./resources/images/information-main.jpg" alt="man reading" />
           <h2>It doesn't hurt to keep practicing</h2>
           <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
-          <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
+          <p class="author" aria-label="author">Emanuel, Sr Strategist at Hiring.com</p>
         </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/information-orientation.jpg" alt="students walking" />
-        <div class="content">
-          <h3>Orientation date</h3>
-          <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
-          <p class="read">Read more</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/information-campus.jpg" alt="campus" />
-        <div class="content">
-          <h3>Our Campus</h3>
-          <p>Find which campus is close by you</p>
-          <p class="read">Read more</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/information-guest-lecture.jpg" alt="guest lecturer" />
-        <div class="content">
-          <h3>Our guest lecture</h3>
-          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-          <p class="read">Read more</p>
+        <div class="sidebar">
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img class="desktop" src="./resources/images/information-orientation.jpg" alt="students walking" />
+              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="students walking" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Orientation date</h3>
+              <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+              <p class="read" role="link">Read more</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img class="desktop" src="./resources/images/information-campus.jpg" alt="campus" />
+              <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="campus" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Our Campus</h3>
+              <p>Find which campus is close by you</p>
+              <p class="read" role="link">Read more</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt="guest lecturer" />
+              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="guest lecturer" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Our guest lecture</h3>
+              <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+              <p class="read" role="link">Read more</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -77,52 +105,78 @@
 
     <div class="courses">
       <h2>Start learning</h2>
-      <div class="container">
-        <img src="./resources/images/course-software.jpg" alt="computers" />
-        <div class="content">
+      <div class="section" role="presentation">
+        <div class="row" role="presentation">
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-software.jpg" alt="computers" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Software engineering</h3>
+              <p>COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-computer-art.jpg" alt="mobile phone" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Computer art</h3>
+              <p>COURSES</p>
+              <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-design.jpg" alt="camera" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Design</h3>
+              <p>COURSES</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+        </div>
+        <div class="row" role="presentation">
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-data.jpg" alt="computer data" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Data</h3>
+              <p>COURSES</p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-business.jpg" alt="chess set" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Business</h3>
+              <p>COURSES</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/course-marketing.jpg" alt="watch" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Marketing</h3>
+              <p>COURSES</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+        <div class="mobile-courses">
           <h3>Software engineering</h3>
-          <p>COURSES</p>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/course-computer-art.jpg" alt="mobile phone" />
-        <div class="content">
           <h3>Computer art</h3>
-          <p>COURSES</p>
-          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/course-design.jpg" alt="camera" />
-        <div class="content">
           <h3>Design</h3>
-          <p>COURSES</p>
-          <p>User Experience Design, User Research, Visual Design</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/course-data.jpg" alt="computer data" />
-        <div class="content">
           <h3>Data</h3>
-          <p>COURSES</p>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/course-business.jpg" alt="chess set" />
-        <div class="content">
           <h3>Business</h3>
-          <p>COURSES</p>
-          <p>Product Development, Business Development, Startup</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/course-marketing.jpg" alt="watch" />
-        <div class="content">
           <h3>Marketing</h3>
-          <p>COURSES</p>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
         </div>
       </div>
     </div>
@@ -130,25 +184,36 @@
     <!-- Thesis -->
 
     <div class="thesis">
-      <div class="container">
-        <video src="./resources/videos/thesis.mp4">
-        <div class="content">
-          <h3>Reimagine urban</h3>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+      <h2>Thesis Exhibit</h2>
+      <div class="section" role="presentation">
+        <div class="feature" role="presentation">
+          <div class="video">
+            <video src="./resources/videos/thesis.mp4" width="100%" height="auto">
+          </div>
+          <div class="content" role="presentation">
+            <h3>Reimagine urban</h3>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          </div>
         </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/thesis-fisma.jpg" alt="papers on desk" />
-        <div class="content">
-          <h3>Fisma: Design and Prototype</h3>
-          <p>Designer showcase of new prototype product</p>
-        </div>
-      </div>
-      <div class="container">
-        <img src="./resources/images/thesis-now-and-then.jpg" alt="city" />
-        <div class="content">
-          <h3>Now and then</h3>
-          <p>Research study about New York</p>
+        <div class="sidebar" role="presentation">
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/thesis-fisma.jpg" alt="papers on desk" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Fisma: Design and Prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="container" role="presentation">
+            <div class="image" role="presentation">
+              <img src="./resources/images/thesis-now-and-then.jpg" alt="city" />
+            </div>
+            <div class="content" role="presentation">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
